# kedro-partitioned

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  docs.yml  release.yml
docs/: Makefile  conf.py  datasets.md  decorators.md  helpers.md  index.md  index.rst  make.bat  parallelism.md  utils.md
docs/_static/: style.css
docs/source/: conf.py  index.rst
docs/source/_autosummary/: kedro_multinode.multinode.multinode.rst  kedro_multinode.multinode.multipipeline.rst  kedro_multinode.rst
kedro_multinode/: __init__.py  multinode.py  plugin.py
kedro_multinode/utils/: constants.py  iterable.py  other.py  string.py  typing.py
kedro_partitioned/: __init__.py  plugin.py
kedro_partitioned/extras/: __init__.py
kedro_partitioned/extras/datasets/: __init__.py  concatenated_dataset.py  nullable_dataset.py  threaded_partitioned_dataset.py  wrapper_dataset.py
kedro_partitioned/io/: __init__.py  partitioned_dataset.py  path_safe_partitioned_dataset.py
kedro_partitioned/pipeline/: __init__.py  multinode.py
kedro_partitioned/pipeline/decorators/: __init__.py  decorators.py  helper_factory.py
kedro_partitioned/utils/: __init__.py  constants.py  io.py  iterable.py  other.py  pipeline.py  string.py  typing.py
tests/: __init__.py  conftest.py  test_module.py  test_multinode.py
tests/extras/: __init__.py
tests/extras/datasets/: mocked_dataset.py  test_concatened_dataset.py  test_threaded_partitioned_dataset.py
tests/hooks/: __init__.py  test_dynamic_partitioned.py
tests/pipeline/: test_multinode.py
