[metadata]
name = kedro-multinode
version = 0.0.1
author = ProjetaAi
description = 'Kedro plugin that allows creation of partitioned nodes (nodes that process each partition in parallel)'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    kedro~=0.18.1
    PyYAML
    tomli
    universal_pathlib
    typing_extensions
[options.entry_points]
kedro.hooks = 
    kedro_multinode = kedro_multinode.plugin:hooks

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    flake8
docs =
    revitron-sphinx-theme @ git+https://github.com/revitron/revitron-sphinx-theme.git@master
    sphinx-copybutton
    sphinx-autodoc-typehints
    sphinx-autoapi
dev =
    %(test)s
    %(docs)s
    yapf
