[metadata]
name = kedro-partitioned
version = attr: kedro_partitioned.__version__
author = ProjetaAi
description = 'Kedro plugin that groups a bunch of tools to deal with partitioned datasets'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    kedro~=0.18.2
    universal_pathlib
    typing_extensions
    pyarrow
    pandas

[options.entry_points]
kedro.hooks = 
    multinode_enabler = kedro_partitioned.plugin:multinode_enabler

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    flake8
    flake8-annotations
    flake8-docstrings
docs =
    sphinx
    revitron-sphinx-theme @ git+https://github.com/revitron/revitron-sphinx-theme.git@master
    sphinx-copybutton
    sphinx-autodoc-typehints
    sphinx-autoapi
dev =
    %(test)s
    %(docs)s
    yapf
    pre-commit

[options.packages.find]
exclude =
    tests*
